[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["gonczor <wiktor.gonczaronek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
pytest = "^8.3.2"
httpx = "^0.27.0"

[tool.pytest.ini_options]
python_files = "test*.py"

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
